resources/css/style.css
/* Colour Palette
Base Green: #008b8e
Accent Blue Green: #ad8cc
Accent Light Green: #4feda4
Dark Background Colour: #444041
Light BG colour: #eee
Shadow Colour: #bcbcbc
Error: #ef7070
*/





*{
    margin: 0;
    padding: 0;
    -webkit-box-sizing: border-box;
    box-sizing: border-box;
}

*:focus {
outline: 0;
outline: none;
}

html,
body{
    background-color: white;
    color: #555555;
    font-family: 'Lato', 'Arial', sans-serif;
    font-weight: 300;
    font-size: 20px;
    text-rendering: optimizeLegibility;
    overflow-x:hidden;
}

.clearfix {zoom:1;}
.clearfix:after{
    content: '-';
    clear: both;
    display: block;
    height: 0;
    visibility: hidden;
}



/*--------------------------------------------------------------------*/
/* MAIN CONTAINERS - ROWS, COLUMNS, SECTIONS */


.row{
    max-width: 1140px;
    margin: 0 auto;
}

section{
    padding: 80px 0;
}


/*--------------------------------------------------------------------*/
/* SPECIAL TEXT (HEADINGS AND LINKS) */

h1,
h2,
h3{
    text-transform: uppercase;
}


h1{
    font-size: 300%;
    font-weight: 300;
    color:#fff;
    word-spacing: 3px;
    letter-spacing: 1px;
    margin-bottom:5px;
}

.subtitle{
    font-size: 100%;
    color:rgba(255, 255, 255, 0.7);
}

h2{
    font-size: 180%;
    word-spacing: 2px;
    text-align: center;
    margin-bottom: 30px;
    letter-spacing: 1px;
}

h3{
    font-size:140%;
    color:#008b8e;
    text-align: center;
    margin-bottom: 15px;
}

a:link,
a:visited{
    color: #008b8e;
    text-decoration: none;
    border-bottom: 1px solid #008b8e;
    padding-bottom: 1px;  
    -webkit-transition: border-bottom 0.2s, color 0.2s;  
    transition: border-bottom 0.2s, color 0.2s;
}

a:hover,
a:active{
    color: #4feda4;
    text-decoration: none;
    border-bottom: 1px solid transparent;
    padding-bottom: 1px; 
}


/*--------------------------------------------------------------------*/
/* LOGOS */

.logo {
    float: left;
    margin-top: 20px;
    height: 80px;
    width: auto;
    
}

.logo-colour {
    float:left;
    display:none;
    height:50px;
    width:auto;
    margin: 5px 0;
}

/*--------------------------------------------------------------------*/
/* ICONS */

.icon-large{
    font-size:432%;
    display:block;
    color: #008b8e;
    margin-bottom: 10px;
    text-align:center;
}

.icon-small {
    display: inline-block;
    width:30px;
    text-align: center;
    color: #555555;
    font-size:120%;
    /* secrets to align text and icons*/
    margin-top: -5px;
    line-height: 120%;
    vertical-align: middle;
}

/*--------------------------------------------------------------------*/
/* HEADER */

header{
    background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(img/hero-img2-min.jpg);
    background-size: cover;
    background-position: center;
    height: 80vh;
    background-attachment: fixed;
}

.hero-box{
    position: absolute;
    width: 1140px;
    top: 30%;
    left: 50%;
    -webkit-transform: translate(-50%, -50%);
    transform: translate(-50%, -50%);
}


.main-nav{
    float: right;
    list-style: none;
    margin-top:40px;
}

.main-nav li{
    display:inline-block;
    margin-left:40px;
}

.main-nav li a:link,
.main-nav li a:visited{
    padding: 8px 0;
    color:#fff;
    text-decoration: none;
    text-transform: uppercase;
    font-size:90%;
    border-bottom: 2px solid transparent;
    transition: border-bottom 0.2s;
}

.main-nav li a:hover,
.main-nav li a:active{
    border-bottom: 2px solid #4feda4;
}

/*--------------------------------------------------------------------*/
/* STICKY NAV (Appears after scrolling below main image) */

.sticky{
    position:fixed;
    top:0;
    left:0;
    width:100%;
    background:rgba(255, 255, 255, 0.95);
    box-shadow: 0 2px 2px #efefef;
    z-index: 9999;
}

.sticky .main-nav{
    margin-top:18px;
}

.sticky .main-nav li a:link,
.sticky .main-nav li a:visited{
    padding: 18px 0;
    color:#555;
}

.sticky .logo-colour {
    display:block;
}

.sticky .logo {
    display:none;
}

/*--------------------------------------------------------------------*/
/* Nav Icon that appears below 768 width */

.mobile-nav-icon{
    float:right;
    margin-top:25px;
    cursor:pointer;
    display:none;
}

.mobile-nav-icon i{
    font-size: 200%;
    color:#fff;
}



/*--------------------------------------------------------------------*/
/* MODULAR */

.section-modular{
    background-color:#eee;
    padding:150px 0;
}


.modular-text{
    margin-top:30px;
    text-align: right;
}

.section-modular h2{
    margin-right:0;
    margin-bottom: 0;
}


.modular-icon{
    display:inline-block;
    margin: 0;
    margin-left: 20px;
    margin-top: -5px;
    vertical-align: middle;
    height: 80px;
}


/*--------------------------------------------------------------------*/
/* FEATURES */

.section-features img{
    display:block;
    margin: 15px auto;
    height: 80px;
    width: auto;
}

/*--------------------------------------------------------------------*/

/* EASY-SETUP */

.section-easy-setup{
    background-color:#eee;
    padding-top: 120px;
    padding-bottom: 0;
}

.section-easy-setup h3{
    text-align: right;
}

.section-easy-setup p{
    text-align: right;
}

.section-easy-setup img{
    display: block;
    height: 450px;
    width: auto;
    vertical-align: middle;
    margin-top: -50%;
    margin-left:-30px;
}


/*--------------------------------------------------------------------*/

/* CONFIGURATION */

.section-configuration{
    padding-bottom: 0;
}

.section-configuration h3{
    text-align: left;
}

.section-configuration p{
    text-align: left;
}

.config-img{
    display: block;
    height: 370px;
    width: auto;
    margin-top: 50px;
}

.config-text{
    padding-left:80px;
}

/*--------------------------------------------------------------------*/

/* PRICING */

.section-pricing{
    background-color: #eee;
}

.section-pricing p{
    text-align: center;
    margin-bottom:10px;
    margin-top: -15px;
}

.section-pricing h2:after {
    display: block;
    height: 2px;
    background-color: #008b8e;
    content: " ";
    width: 100px;
    margin: 0 auto;
    margin-top: 15px;
}

.section-pricing h3{
    text-transform: none;
    padding-bottom: 10px;
}

.plan-box{
    box-shadow: 0 2px 2px #d5d5d5;
    border-radius: 5px;
    border: solid 1px #000 0.9;
    background-color: #f5f5f5;
    padding-top:20px;
}

.plan-box div:first-child{
    
    border-top-left-radius: 5px;
    border-top-right-radius: 5px;
    border-bottom: 1px solid #e8e8e8;
    padding:17px 0;
}

#plan-box-all-in-one{
    padding: 0px;
}

#plan-box-custom{
    padding: 32px 0;
}

#plan-box-custom h3{
    color:#ef7070;
}

.plan-box div:last-child{
    background-color:#fafafa;
    padding-top:10px;
}

#plan-box-custom-list{
    padding: 28px 0;
}

.plan-price{
    font-size: 150%;
    margin-bottom: 10px;
    font-weight: 100;
    color:#008b8e;
    text-align: center;
}

.plan-price span {
    font-size: 50%;
    font-weight:300;
}

.plan-box i{
    margin-right:-15px;
}

.plan-box ul {
    list-style: none;
    text-indent:-15px;
}

.plan-box ul li{
    padding:5px 10px 5px 40px;
    font-size: 80%;
    
}

/*--------------------------------------------------------------------*/
/* CONTACT FORM */

.section-contact-us{
}

/*--------------------------------------------------------------------*/
/* FOOTER */

footer{
    background-color:#444041;
    padding: 40px;
    font-size:80%;
}

.footer-nav{
    list-style: none;
    float:left;
}

.social-links {
    list-style: none;
    float:right;
}

.footer-nav li,
.social-links li {
    display: inline-block;
    margin-right: 20px;
}

.footer-nav li:last-child,
.social-links li:last-child{
    margin:0;
}

.footer-nav li a:link,
.footer-nav li a:visited,
.social-links li a:link,
.social-links li a:visited {
    border:0;
    text-decoration: none;
    color:#888888;
    -webkit-transition: color 0.2s;
    transition: color 0.2s;
}

.footer-nav li a:hover,
.footer-nav li a:active {
    color:#ddd;
}

.social-links li a:link,
.social-links li a:visited {
    font-size: 160%;
}

.ion-social-facebook,
.ion-social-twitter,
.ion-social-googleplus,
.ion-social-instagram {
    -webkit-transition: color 0.2s;
    transition: color 0.2s;
}

.ion-social-facebook:hover{
    color: #3b5998;
}

.ion-social-twitter:hover{
    color: #00b6f1;
}
.ion-social-googleplus:hover{
    color: #df4a32;
}
.ion-social-instagram:hover{
    color: #c32aa3;
}


footer p{
    margin-top: 20px;
    color:#888;
    text-align: center;
}

/*--------------------------------------------------------------------*/
/* ANIMATIONS */


.js--wp1, .js--wp2, .js--wp3{
    opacity: 0;
    animation-duration: 1s;
}

.js--wp1.animated, .js--wp2.animated, .js--wp3.animated {
    opacity: 1;
}

